# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "http-server-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.81"                                   # error handling
bytes = "1.5.0"                                     # helps manage buffers
clap = { version = "4.5.3", features = ["derive"] }
thiserror = "1.0.58"                                # error handling
tokio = { version = "1.36.0", features = ["full"] } # async networking
nom = "7.1.3"                                       # parser combinators
itertools = "0.12.1"                                # General iterator helpers

[dev-dependencies]
pretty_assertions = "1.4.0"                         # nicer looking assertions

